# fer-design-patterns-labs

./: CMakeLists.txt  README.md
lab1/: CMakeLists.txt
lab1/lab1_1/: CMakeLists.txt
lab1/lab1_1/src/: main.c
lab1/lab1_2/: CMakeLists.txt
lab1/lab1_2/src/: lab1_2.c  main.c  main.cpp
lab1/lab1_3/: CMakeLists.txt
lab1/lab1_3/src/: lab1_3.cpp  lab1_3.txt  main.cpp
lab1/lab1_4/: CMakeLists.txt
lab1/lab1_4/src/: lab1_4.cpp  lab1_4.s  lab1_4.txt
lab1/lab1_5/: CMakeLists.txt
lab1/lab1_5/src/: lab1_5.cpp  main.cpp
lab1/lab1_6/: CMakeLists.txt
lab1/lab1_6/src/: lab1_6.cpp  lab1_6.s  lab1_6.txt  main.cpp
lab1/src/: main.c
lab2/: CMakeLists.txt
lab2/lab2_0/: CMakeLists.txt
lab2/lab2_0/src/: lab2_0.cpp
lab2/lab2_1/: CMakeLists.txt
lab2/lab2_1/src/: lab2_1.c
lab2/lab2_2/: CMakeLists.txt
lab2/lab2_2/src/: lab2_2.cpp
lab2/lab2_3/: lab2_3.py
lab2/lab2_4/: CMakeLists.txt
lab2/lab2_4/src/: lab2_4.cpp
lab2/lab2_5/: CMakeLists.txt
lab2/lab2_5/include/: Izvor.hpp  IzvorDatotecni.hpp  IzvorTipkovnicki.hpp  Observer.hpp  ObserverAvg.hpp  ObserverLog.hpp  ObserverMedian.hpp  ObserverSum.hpp  SlijedBrojeva.hpp
lab2/lab2_5/src/: Izvor.cpp  IzvorDatotecni.cpp  IzvorTipkovnicki.cpp  Observer.cpp  ObserverAvg.cpp  ObserverLog.cpp  ObserverMedian.cpp  ObserverSum.cpp  SlijedBrojeva.cpp  lab2_5.cpp
lab2/lab2_6/: CMakeLists.txt  Cell.py  Sheet.py  lab2_6.py
lab3/: CMakeLists.txt
lab3/lab3_1_1/: CMakeLists.txt
lab3/lab3_1_1/include/: myfactory.h
lab3/lab3_1_1/libs/: parrot.c  tiger.c
lab3/lab3_1_1/src/: lab3_1_1.c  myfactory.c
lab3/lab3_1_3/: CMakeLists.txt
lab3/lab3_1_3/include/: Animal.hpp  Factory.hpp  IAnimal.hpp  Parrot.hpp  Tiger.hpp
lab3/lab3_1_3/src/: Animal.cpp  Factory.cpp  Parrot.cpp  Tiger.cpp  lab3_1_3.c  lab3_1_3.cpp
lab3/lab3_2/: CMakeLists.txt
lab3/lab3_2/src/: lab3_2.c
lab3/lab3_2/src/hr/fer/ooup/texteditor/: ClipboardStack.java  CursorObserver.java  EditorCanvas.java  IClipboardStack.java  ICursorObserver.java  IEditAction.java  IPlugin.java  ITextObserver.java  Location.java  LocationRange.java  Main.java  Statistika.java  TextEditor.java  TextEditorModel.java  TextObserver.java  UndoManager.java  VelikoSlovo.java  Window.java
lab3/lab3_3/: CMakeLists.txt
lab3/lab3_3/src/: lab3_3.cpp
lab3/lab3_4/: CMakeLists.txt
lab4/: CMakeLists.txt
lab4/src/hr/fer/ooup/paint/: AbstractGraphicalObject.java  Canvas.java  DocumentModel.java  G2DRendererImpl.java  GUI.java  GeometryUtil.java  IDocumentModelListener.java  IGraphicalObject.java  IGraphicalObjectListener.java  IRenderer.java  LineSegment.java  Oval.java  Paint.java  PaintCanvas.java  Point.java  Rectangle.java
lab4/src/hr/fer/ooup/paint/geometry/: GeometryUtil.java  LineSegment.java  Oval.java  Point.java  Rectangle.java
lab4/src/hr/fer/ooup/paint/render/: AbstractGraphicalObject.java  DocumentModel.java  G2DRendererImpl.java  GUI.java  IDocumentModelListener.java  IGraphicalObject.java  IGraphicalObjectListener.java  IRenderer.java  PaintCanvas.java
lab4/src/hr/fer/ooup/paint/states/: AddShapeState.java  IState.java  IdleState.java  SelectShapeState.java
