cmake_minimum_required(VERSION 3.0)
project(fer-design-patterns-labs)

add_subdirectory(lab1/lab1_1)
add_subdirectory(lab1/lab1_2)
add_subdirectory(lab1/lab1_3)
add_subdirectory(lab1/lab1_4)
add_subdirectory(lab1/lab1_5)
add_subdirectory(lab1/lab1_6)

add_subdirectory(lab2/lab2_0)
add_subdirectory(lab2/lab2_1)
add_subdirectory(lab2/lab2_2)
add_subdirectory(lab2/lab2_4)
add_subdirectory(lab2/lab2_5)

add_subdirectory(lab3/lab3_1_1)
add_subdirectory(lab3/lab3_1_3)
add_subdirectory(lab3/lab3_3)